# creditcoin-legacy-processor-rust

./: .gitignore  .grcov.yml  Cargo.toml  README.md  build.rs
.github/: pull_request_template.md
.github/workflows/: ci.yml
proto/: Address.proto  AskOrder.proto  BidOrder.proto  DealOrder.proto  Fee.proto  Offer.proto  RepaymentOrder.proto  Transfer.proto  Wallet.proto
src/: ext.rs  handler.rs  main.rs
src/handler/: constants.rs  context.rs  settings.rs  tests.rs  types.rs  utils.rs
src/handler/tests/: mocked.rs
