[package]
name = "ccprocessor-rust"
version = "0.1.0"
authors = ["Nathan Whitaker <nathan.whitaker01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
clap = "2.33.3"
dashmap = "4.0.2"
derive_more = "0.99.13"
enum_dispatch = "0.3.6"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
once_cell = "1.7.2"
prost = "0.7.0"
rand = "0.8.3"
rug = "1.12.0"
sawtooth-sdk = { version = "0.5", path = "../sawtooth-sdk-rust" }
serde_cbor = "0.11.1"
serde_json = "1.0.64"
sha2 = "0.9.5"
typed-builder = "0.9.0"
zmq = "0.9.2"

[build-dependencies]
anyhow = "1.0.40"
glob = "0.3.0"
prost-build = "0.7.0"

[dev-dependencies]
mockall = "0.9.1"
paste = "1.0.5"

[features]
nightly = ["mockall/nightly"]
