[package]
name = "ccprocessor-rust"
version = "0.1.0"
authors = ["Nathan Whitaker <nathan.whitaker01@gmail.com>", "Gluwa Inc."]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
clap = "2.33.3"
dashmap = "4.0.2"
derive_more = "0.99.13"
enum_dispatch = "0.3.6"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
once_cell = "1.7.2"
prost = "0.7.0"
rand = "0.8.3"
rug = { version = "1.12.0", features = [
    "integer",
    "gmp-mpfr-sys",
], default-features = false }
sawtooth-sdk = { package = "sawtooth-sdk-creditcoin", git = "https://github.com/nathanwhit/sawtooth-sdk-rust", branch = "main" }
sawtooth-sdk-compat = { package = "sawtooth-sdk-creditcoin", git = "https://github.com/nathanwhit/sawtooth-sdk-rust", branch = "sawtooth1.0.5", optional = true }
serde_cbor = "0.11.1"
serde_json = "1.0.64"
sha2 = "0.9.5"
zmq = "0.9.2"

[build-dependencies]
anyhow = "1.0.40"
glob = "0.3.0"
prost-build = "0.7.0"

[dev-dependencies]
enclose = "1.1.8"
itertools = "0.10.1"
mockall = "0.9.1"
paste = "1.0.5"
serde = { version = "1.0.126", features = ["derive"] }

[features]
default = ["vendored", "mock"]
nightly = ["mockall/nightly"]
vendored = ["zmq/vendored"]
old-sawtooth = ["sawtooth-sdk-compat"]
mock = []
